tests/bad_reserved_name_struct.stderr
tests/bad_reserved_name_struct.sl:2:8: error: SL2008: identifier prefix '__sl_' is reserved
tests/bad_reserved_name_struct.sl:2:8: hint: SL2008: rename symbol to avoid '__sl_' prefix
