tests/bad_reserved_name_struct.sl
// Verifies bad reserved name struct.
struct __sl_bad {}
